Bug 326291 - Information modules require double-clicking
Summary: Information modules require double-clicking
Status: RESOLVED FIXED
Alias: None
Product: kinfocenter
Classification: Applications
Component: KInfoCenter Viewer (other bugs)
Version First Reported In: 4.10.5
Platform: Kubuntu Linux
: NOR minor
Target Milestone: ---
Assignee: David Hubner
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-10-19 20:12 UTC by Kayra Akman
Modified: 2013-10-27 18:13 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.12
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kayra Akman 2013-10-19 20:12:46 UTC
KInfoCenter has a very familier user interface where a user clicks on nodes in a tree list to select an item and to see the relevant informatin in the main view. KInfoCenter requires double-clicking a tree item to show the information of the selection module. This is not most, if not all, users are accustomed to. Single-clicking should be necessary to change the contents of the main view.

Moreover, single-clicking selects an item but doesn't update the main view.

Reproducible: Always

Steps to Reproduce:
1. Select a module in the module tree by single-clicking
Actual Results:  
Item in the tree is selected but the main view is not changed/updated.

Expected Results:  
Reelvant info should by shown in the main view after a single-click.

Kubuntu 13.04
Comment 1 Burkhard Lück 2013-10-25 06:26:25 UTC
System Settings -> Input Devices -> Mouse -> "Single-click to open files and Folder" selected

I can not reproduce this issue with Kubuntu 12.04/KDE 4.11.1, 4.11 + master compiled from sources
Comment 2 Christoph Feck 2013-10-25 13:43:01 UTC
I think at other places we used "clicked" instead of "activated" signal to avoid depending on that configuration (which does not make sense here).
Comment 3 Kayra Akman 2013-10-25 19:29:51 UTC
(In reply to comment #1)
> System Settings -> Input Devices -> Mouse -> "Single-click to open files and
> Folder" selected
> 
> I can not reproduce this issue with Kubuntu 12.04/KDE 4.11.1, 4.11 + master
> compiled from sources

I am using the "double-click" version of that setting. When switching to the "single-click" it works as expected.

However the items in KInfoCenter are neither files nor folders, IMHO, it should not consider that  setting.
Comment 4 Burkhard Lück 2013-10-26 14:15:01 UTC
$ wcgrep activated kinfocenter/
kinfocenter/sidepanel.cpp:49:    connect(this,SIGNAL(activated(QModelIndex)),this,SLOT(activatedSlot(QModelIndex)));
kinfocenter/sidepanel.cpp:54:    disconnect(this,SIGNAL(activated(QModelIndex)),this,SLOT(activatedSlot(QModelIndex)));
kinfocenter/sidepanel.cpp:60:void SidePanel::activatedSlot(const QModelIndex &index)
kinfocenter/sidepanel.cpp:67:    emit activated(item);
kinfocenter/sidepanel.cpp:78:    emit activatedSlot(rootIndex);
kinfocenter/sidepanel.h:84:        void activated(const KcmTreeItem *);
kinfocenter/sidepanel.h:91:        void activatedSlot(const QModelIndex &index);
kinfocenter/Modules/view1394/view1394.cpp:195:          connect(notif, SIGNAL(activated(int)), this, SLOT(callRaw1394EventLoop(int)));
kinfocenter/infocenter.cpp:73:    connect(m_sideMenu,SIGNAL(activated(const KcmTreeItem*)),this,SLOT(itemClickedSlot(const KcmTreeItem*)));
kinfocenter/infocenter.cpp:106:    disconnect(m_sideMenu,SIGNAL(activated(const KcmTreeItem*)),this,SLOT(itemClickedSlot(const KcmTreeItem*)));

@Christoph Feck

Where should "activated" be changed to "clicked" ?
Comment 5 David Hubner 2013-10-26 21:19:47 UTC
I shall fix this tomorrow morning.
Comment 6 David Hubner 2013-10-27 18:13:44 UTC
Commit: 5f60ce14f213cc6a083bc73b6b0732de6fb30249

Change sidepanel events from activated to clicked 

Change the events due to the single click, double click setting 
in KDE not being taken into account. 

BUG: 326291 
FIXED-IN: 4.12