Change sidepanel events from activated to clicked

Change the events due to the single click, double click setting
in KDE not being taken into account.

BUG: 326291
FIXED-IN: 4.12